# VPScope

./: .gitignore  AGENTS.md  README.md  Style.md  package.json  pnpm-lock.yaml
.agents/skills/testing-vpscope-frontend/: SKILL.md
.github/workflows/: release-macos.yml
.trellis/: .template-hashes.json  config.yaml
.trellis/spec/guides/: code-reuse-thinking-guide.md  contract-and-integration.md  index.md  (+2 more)
docs/: vpscope-plan.md
docs/roles/: README.md  backend-rust.md  contracts.md  frontend.md  integration-checklist.md  integration-test.md  manual-vps-report-real-vps-redacted.md  manual-vps-report.md
scripts/: collect-vps-baseline.sh  verify-known-hosts-flow.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_state.rs  errors.rs  events.rs  lib.rs  main.rs  tray.rs
src-tauri/src/commands/: docker.rs  hosts.rs  metrics.rs  mod.rs  processes.rs  settings.rs
src-tauri/src/config/: alert_settings.rs  host_config.rs  mod.rs  storage.rs  terminal_settings.rs  tray_settings.rs
src-tauri/src/credentials/: mod.rs
src-tauri/src/metrics/: collector.rs  mod.rs  scheduler.rs  snapshot.rs
src-tauri/src/parsers/: cpu.rs  disk.rs  memory.rs  network.rs  process.rs  system.rs
src-tauri/src/ssh/: client.rs  known_hosts.rs  mod.rs  session_pool.rs
src-tauri/tests/fixtures/: df_p.txt  proc_meminfo_ubuntu_22.txt  proc_net_dev_multi_iface.txt  proc_stat_ubuntu_22.txt  ps_output.txt
web/: index.html  package.json  vite.config.ts
web/src/: main.tsx  styles.css  vite-env.d.ts
(+83 files in other folders)
