[package]
name = "vpscope"
version = "0.1.0"
description = "A macOS desktop app for monitoring VPS resource usage"
authors = ["VPScope Contributors"]
edition = "2021"

[lib]
name = "vpscope_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
async-trait = "0.1"
openssh = { version = "0.11.6", features = ["native-mux"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
uuid = { version = "1", features = ["v4"] }
